Removed mouse on the screen and locates the mouse in space.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ set(SDL2_LIB_DIR C:/SDL/SDL2-2.0.12/lib/x64)
 include_directories(${SDL2_INCLUDE_DIR})
 link_directories(${SDL2_LIB_DIR})
 
-add_executable(TestSDL main.cpp app/application.cpp app/application.h entities/ship.h entities/ship.cpp render/utilities.cpp render/utilities.h render/spritesheet.cpp render/spritesheet.h entities/ship2.h entities/ship2.cpp entities/meteorite.cpp entities/meteorite.h render/background.cpp render/background.h entities/star.cpp entities/star.h)
+add_executable(TestSDL main.cpp app/application.cpp app/application.h entities/ship.h entities/ship.cpp render/utilities.cpp render/utilities.h render/spritesheet.cpp render/spritesheet.h entities/ship2.h entities/ship2.cpp entities/meteorite.cpp entities/meteorite.h render/background.cpp render/background.h entities/star.cpp entities/star.h app/mouse.cpp app/mouse.h)
 
 target_link_libraries(${PROJECT_NAME} SDL2main SDL2 SDL2_image)
